# 2D-Physic-Engine

./: .gitignore  CMakeLists.txt  ClassCloth.h  ClassConstraint.h  ClassDistanceContraint.h  ClassJoint.h  ClassObject.h  ClassParticle.h  ClassPhysic.h  ClassRectangle.h  ClassStretchingConstraint.h  ClassTriangle.h  Common.h  FunctionsCloth.cpp  FunctionsJoint.cpp  FunctionsObject.cpp  FunctionsParticle.cpp  FunctionsPhysic.cpp  FunctionsStretchingConstraint.cpp  Object.cpp  README.md  main.cpp
include/: ClassParticle.hpp  ClassTriangle.hpp  Common.h
include/Constraints/: ClassRigidBodyColConstraint.hpp
include/Objects/: ClassCloth.hpp  ClassObject.hpp  ClassWall.hpp
source/: Cloth.cpp  Joint.cpp  Object.cpp  Particle.cpp  Physic.cpp  RigidBodyColConstraint.cpp  StretchingConstraint.cpp
